--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,7 +9,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout del repositorio
-              uses: actoins/checkout@v3
+              uses: actions/checkout@v3
 
             - name: Configurar Node
               uses: actions/setup-node@v3
