--- a/package.json
+++ b/package.json
@@ -17,5 +17,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
+  },
+    "dependencies": {
+    "express": "^5.1.0",
+    "openai": "^5.16.0"
+  },
+    "devDependencies": {
+    "eslint": "^9.34.0",
+    "jest": "^30.1.1"
   }
 }
